added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my simple website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div><h3>my first websites</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt fuga assumenda vero maxime sequi odit, repellendus natus fugiat veritatis a unde corrupti architecto mollitia consequatur debitis perferendis? Quas, aperiam ad.</p></div>
 </body>
 </html>
