added the second & third blog

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     <div><h3>my first websites</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt fuga assumenda vero maxime sequi odit, repellendus natus fugiat veritatis a unde corrupti architecto mollitia consequatur debitis perferendis? Quas, aperiam ad.</p></div>
+    <div><h3>my second websites</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt fuga assumenda vero maxime sequi odit, repellendus natus fugiat veritatis a unde corrupti architecto mollitia consequatur debitis perferendis? Quas, aperiam ad.</p></div>
+    <div><h3>my third websites</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt fuga assumenda vero maxime sequi odit, repellendus natus fugiat veritatis a unde corrupti architecto mollitia consequatur debitis perferendis? Quas, aperiam ad.</p></div>
+    </div>
 </body>
 </html>
