--- a/index.html
+++ b/index.html
@@ -14,5 +14,12 @@
     <div><h3>my third websites</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt fuga assumenda vero maxime sequi odit, repellendus natus fugiat veritatis a unde corrupti architecto mollitia consequatur debitis perferendis? Quas, aperiam ad.</p></div>
     </div>
+    <div><h3>how to push incremental code</h3>
+    <ul>
+        <li>git add.</li>
+        <li>git commit -m"add a meaningful commit message </li>
+        <li>git push</li>
+    </ul></div>
+
 </body>
 </html>
