added a stone pic

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <li>git commit -m"add a meaningful commit message </li>
         <li>git push</li>
     </ul></div>
+    <div><h3>stone pic</h3>
+    <img src="images/metallic-crumple-1185209.webp" alt="black"></div>
 
 </body>
 </html>
